# agent-introspection

./: .gitignore  .infisical.json  .pre-commit-config.yaml  README.md  config.example.toml  pyproject.toml
.agents/skills/agent-introspection/: README.md  SKILL.md
.agents/skills/agent-introspection/references/: step-1-health-workflow.md  step-2-scan-workflow.md  step-3-model-review-workflow.md  step-4-proposal-workflow.md  step-5-approval-workflow.md
.agents/skills/introspection-operations/: README.md  SKILL.md
.agents/skills/introspection-review/: README.md  SKILL.md
.github/workflows/: ci-quality-gates.yml
docs/: IMPLEMENTATION_PLAN.md  PLAN.md  model-capability-canary.schema.json
ops/signoz/: docker-compose.override.yaml
scripts/: check-quality-gate-parity.sh  run-ci-quality-gates.sh
src/agent_introspection/: __init__.py  capabilities.py  cli.py  config.py  dashboard.py  database.py  detectors.py  evidence.py  generations.py  identities.py  interventions.py  migrations.py  normalization.py  outcomes.py  proposals.py  review.py  scan.py  scheduler.py  source.py  telemetry.py  trends.py
src/agent_introspection/assets/: agent-introspection.json
tests/: test_capabilities.py  test_cli.py  test_config.py  test_dashboard.py  test_database.py  test_detectors.py  test_evidence.py  test_generations.py  test_identities.py  test_interventions.py  test_migrations.py  test_normalization.py  test_outcomes.py  test_proposals.py  test_review.py  test_scan.py  test_scheduler.py  test_source.py  test_telemetry.py  test_trends.py
(+6 files in other folders)
