[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-introspection"
version = "0.1.0"
description = "Deterministic Codex telemetry introspection with approval-gated proposals"
requires-python = ">=3.12"
dependencies = [
  "opentelemetry-api>=1.39.0",
  "opentelemetry-exporter-otlp-proto-http>=1.39.0",
  "opentelemetry-proto>=1.39.0",
  "opentelemetry-sdk>=1.39.0",
]

[project.scripts]
agent-introspection = "agent_introspection.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.19.0",
  "pre-commit>=4.5.0",
  "pytest>=9.0.0",
  "ruff>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_introspection"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["agent_introspection"]
